# tso

./: .gitignore  Cargo.toml  README.md  paper.md  paper.tex  phase0_generalization.py  phase1_tso_net.py  requirements.txt
archive/: README.md  blueprint_minilm.md
experiments/: benchmark_results.csv  benchmark_tso_vs_transformer.py  nli_data.pkl  phase0_geometry.py  phase13_shakespeare.py  phase16_nli_benchmark.py  phase16_results.csv  phase17_results.csv  phase17_snli_benchmark.py  phase18_frugal_tso.py  phase18_results.csv  phase19_results.csv  phase19_topological_tso.py  phase20_results.csv  phase20_trifriction_tso.py  phase21_results.csv  phase21_selective_learning.py  phase22_results.csv  phase22_stress_test.py  phase23_results.csv  phase23_topological_attractors.py  phase24_attractor_sharpening.py  phase24_results.csv  phase25_multinli.py  snli_data.pkl
src/: double_mapping_test.py  native_critic.py  phase11_skip_flops.py  phase12_tokenizer.py  phase14_dialogue.py  phase3_pipeline.py  phase5_decoder.py  phase6_autoregressive.py  phase7_scaling_decoder.py
tests/: test_friction.py
tso-bench/: Cargo.toml
tso-bench/src/: main.rs
tso-engine/: Cargo.toml  paper.md
tso-kernel/: Cargo.toml
tso-kernel/src/: attractor.rs  core.rs  decoder.rs  deep.rs  friction.rs  lib.rs  model.rs  neurons.rs  operators.rs  pipeline.rs  plasticity.rs  projector.rs
tso-kernel/tests/: test_kernel.rs
tso-nlp/: Cargo.toml
tso-nlp/src/: bpe.rs  cluster_map.rs  dataset.rs  distributional.rs  graph_builder.rs  lib.rs  metrics.rs  som.rs  syntagmatic.rs  tokenizer.rs
(+111 files in other folders)
