[package]
name = "tso-bench"
version = "0.1.0"
edition = "2021"
description = "TSO benchmark — SNLI/MultiNLI evaluation"

[dependencies]
tso-kernel = { path = "../tso-kernel" }
tso-nlp = { path = "../tso-nlp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1.10"
rand = "0.8"
ndarray = "0.16"
