[package]
name = "tso-kernel"
version = "3.1.0"
edition = "2021"
description = "TSO (Topographic Stabilization Operator) — v3.1 kernel in Rust"

[dependencies]
ndarray = "0.16"
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[lib]
name = "tso_kernel"
path = "src/lib.rs"
