[package]
name = "tso-nlp"
version = "0.1.0"
edition = "2021"
description = "TSO NLP layer — tokenizer, graph builder, cluster mapping"

[dependencies]
tso-kernel = { path = "../tso-kernel" }
ndarray = "0.16"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
rand = "0.8"

tokenizers = "0.21"
